# pi_ws

./: .gitignore  Instructions  README.md  wiringpi_example.py
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/cam/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/gazebo_ipbot/: .catkin  .rosinstall
devel/.private/pi_ipbot/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/cam/: cam
logs/cam/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.004.log.stderr  build.make.111.log.stderr  build.make.113.log.stderr  build.make.114.log.stderr  build.make.123.log.stderr  build.make.129.log.stderr  build.make.137.log.stderr
logs/gazebo_ipbot/: build.check.002.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
logs/pi_ipbot/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/pibot/: build.check.010.log.stderr  build.check.011.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.039.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.045.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.057.log.stderr  build.make.058.log.stderr  build.make.059.log.stderr  build.make.060.log.stderr  (+53 more)
logs/wiringpi_blink/: build.make.003.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr
pi_ipbot/: CMakeLists.txt  package.xml
pi_ipbot/src/: main.cpp
src/: piserial_motor.py  wiringpi_example.py
src/Test/: pros_wrap.cpp
src/cam/: CMakeLists.txt  package.xml
src/digitizer/: CMakeLists.txt  package.xml
src/gazebo_ipbot/: CMakeLists.txt  package.xml
src/pi_ipbot/: CMakeLists.txt
src/pi_ipbot/src/: gpio.cpp  main.cpp
src/pibot/: CMakeLists.txt  package.xml
src/pibot/include/cam/: cam.h
src/pibot/include/lane_hl/: lane_hl.h
src/pibot/include/lane_ipm/: lane_ipm.h
src/pibot/include/pid/: pid.h
src/pibot/scripts/: motor.py
src/pibot/src/: .main.cpp.swp  .motor.py.swp  main.cpp  motor.py
src/pibot/src/cam/: cam.cpp  main.cpp
src/pibot/src/ir_pid/: ir_pid.cpp
src/pibot/src/lane_hl/: hough.cpp  lane_hl.cpp  main.cpp
src/pibot/src/lane_ipm/: lane_ipm.cpp  main.cpp
src/pibot/src/pid/: pid.cpp
src/wiringpi_blink/: CMakeLists.txt  package.xml
(+65 files in other folders)
